domain/src/main/java/com/example/domain/base/error/NetworkException.kt
package com.example.domain.base.error

import java.io.IOException

class NetworkException(val code: CommonErrorCode) : IOException()